--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '3038674379765069');
+  fbq('init', '5504279339698934');
+  fbq('init', '1307217590075424');
 fbq('track', 'Purchase');
 </script>
 <noscript><img height="1" width="1" style="display:none"
